cloud: package scruffy into the cloud container bundle
Change-Id: Ic82e2d530dd4a3f97c4985427754d38ad4afcfc1
Reviewed-on: https://review.monogon.dev/c/monogon/+/1896
Tested-by: Jenkins CI
Reviewed-by: Serge Bazanski <serge@monogon.tech>

--- a/cloud/BUILD.bazel
+++ b/cloud/BUILD.bazel
@@ -7,6 +7,7 @@ container_bundle(
         "gcr.io/monogon-infra/cloud/apigw:{IMAGE_TAG}": "//cloud/apigw:apigw_container",
         "gcr.io/monogon-infra/cloud/shepherd/equinix:{IMAGE_TAG}": "//cloud/shepherd/equinix/manager/server:server_container",
         "gcr.io/monogon-infra/cloud/bmsrv:{IMAGE_TAG}": "//cloud/bmaas/server/cmd:cmd_container",
+        "gcr.io/monogon-infra/cloud/scruffy:{IMAGE_TAG}": "//cloud/bmaas/scruffy/cmd:cmd_container",
     },
 )
 
