m/cli/metroctl: implement `k8s configure` command
Change-Id: I3da7a627b1ada462e62b739bde2073743262e23e
Reviewed-on: https://review.monogon.dev/c/monogon/+/1905
Reviewed-by: Leopold Schabel <leo@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "metroctl_lib",
     srcs = [
         "cmd_install.go",
+        "cmd_k8s_configure.go",
         "cmd_k8scredplugin.go",
         "cmd_node.go",
         "cmd_node_approve.go",
