--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -3,6 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 go_library(
     name = "metroctl_lib",
     srcs = [
+        "cmd_certs.go",
         "cmd_install.go",
         "cmd_k8s_configure.go",
         "cmd_k8scredplugin.go",
