metropolis/node/core/metrics: export (controller-manager|scheduler) metrics
Change-Id: Ie61551655cbf1130bb5f5beb2923dac1aa52f868
Reviewed-on: https://review.monogon.dev/c/monogon/+/1952
Tested-by: Jenkins CI
Reviewed-by: Serge Bazanski <serge@monogon.tech>

--- a/metropolis/node/core/metrics/BUILD.bazel
+++ b/metropolis/node/core/metrics/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//metropolis/pkg/logtree",
         "//metropolis/pkg/supervisor",
         "//metropolis/proto/common",
+        "@io_k8s_kubernetes//cmd/kubeadm/app/constants",
     ],
 )
 
