Set flaky=True on roleserve_test and memory_test
These are frequent CI failures.

Change-Id: Ic45f4dcd22bb608bc96da84c9de74faae1f8daab
Reviewed-on: https://review.monogon.dev/c/monogon/+/1953
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/node/core/roleserve/BUILD.bazel
+++ b/metropolis/node/core/roleserve/BUILD.bazel
@@ -50,6 +50,8 @@ go_test(
     name = "roleserve_test",
     srcs = ["worker_statuspush_test.go"],
     embed = [":roleserve"],
+    # TODO: https://github.com/monogon-dev/monogon/issues/250
+    flaky = True,
     deps = [
         "//metropolis/node",
         "//metropolis/node/core/consensus",
