--- a/metropolis/pkg/event/memory/BUILD.bazel
+++ b/metropolis/pkg/event/memory/BUILD.bazel
@@ -15,4 +15,6 @@ go_test(
         "memory_test.go",
     ],
     embed = [":memory"],
+    # TODO: https://github.com/monogon-dev/monogon/issues/127
+    flaky = True,
 )
