--- a/metropolis/node/core/update/BUILD.bazel
+++ b/metropolis/node/core/update/BUILD.bazel
@@ -9,9 +9,9 @@ go_library(
         "//metropolis/node/build/mkimage/osimage",
         "//metropolis/pkg/blockdev",
         "//metropolis/pkg/efivarfs",
+        "//metropolis/pkg/gpt",
         "//metropolis/pkg/logtree",
         "@com_github_cenkalti_backoff_v4//:backoff",
-        "@com_github_google_uuid//:uuid",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
     ],
