--- a/metropolis/node/core/update/BUILD.bazel
+++ b/metropolis/node/core/update/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "update",
@@ -16,5 +16,16 @@ go_library(
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_x_sys//unix",
+    ],
+)
+
+go_test(
+    name = "update_test",
+    srcs = ["update_test.go"],
+    embed = [":update"],
+    deps = [
+        "//metropolis/pkg/efivarfs",
+        "//metropolis/pkg/gpt",
+        "@com_github_google_uuid//:uuid",
     ],
 )
