m/i/t: replace loglevel=0 with quiet
We should really not be using loglevel=0 in tests, it hides even
critical errors like panics.

Change-Id: I6e8dc0f2352efe7f9328faeb0c5e736a75eacb0e
Reviewed-on: https://review.monogon.dev/c/monogon/+/2033
Tested-by: Jenkins CI
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/metropolis/installer/test/BUILD.bazel
+++ b/metropolis/installer/test/BUILD.bazel
@@ -33,7 +33,7 @@ go_library(
 
 efi_unified_kernel_image(
     name = "kernel",
-    cmdline = "loglevel=0 console=ttyS0",
+    cmdline = "quiet console=ttyS0",
     initrd = ["//metropolis/installer:initramfs"],
     kernel = "//third_party/linux",
     visibility = ["//visibility:private"],
