--- a/metropolis/pkg/logtree/BUILD.bazel
+++ b/metropolis/pkg/logtree/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "journal_entry.go",
         "journal_subscriber.go",
         "klog.go",
+        "kmsg.go",
         "leveled.go",
         "leveled_payload.go",
         "logtree.go",
@@ -29,7 +30,15 @@ go_library(
         "@org_golang_google_protobuf//types/known/timestamppb",
         "@org_uber_go_zap//:zap",
         "@org_uber_go_zap//zapcore",
-    ],
+    ] + select({
+        "@io_bazel_rules_go//go/platform:android": [
+            "@org_golang_x_sys//unix",
+        ],
+        "@io_bazel_rules_go//go/platform:linux": [
+            "@org_golang_x_sys//unix",
+        ],
+        "//conditions:default": [],
+    }),
 )
 
 go_test(
@@ -37,6 +46,7 @@ go_test(
     srcs = [
         "journal_test.go",
         "klog_test.go",
+        "kmsg_test.go",
         "logtree_test.go",
         "zap_test.go",
     ],
