Set flaky flag on all known flakes
Bazel will retry tests marked as flaky up to three times. This has
the obvious downside of making the flakes less visible, but popping
up as unrelated build failures is not the best way to surface them.

Change-Id: I0c97450b17f2e8a56275d3b738e7d34b89be44f6
Reviewed-on: https://review.monogon.dev/c/monogon/+/2047
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/cloud/bmaas/bmdb/BUILD.bazel
+++ b/cloud/bmaas/bmdb/BUILD.bazel
@@ -35,6 +35,8 @@ go_test(
         "@cockroach",
     ],
     embed = [":bmdb"],
+    # TODO: https://github.com/monogon-dev/monogon/issues/213
+    flaky = True,
     deps = [
         "//cloud/agent/api",
         "//cloud/bmaas/bmdb/model",
