--- a/metropolis/node/core/curator/BUILD.bazel
+++ b/metropolis/node/core/curator/BUILD.bazel
@@ -63,6 +63,8 @@ go_test(
         "state_test.go",
     ],
     embed = [":curator"],
+    # TODO: https://github.com/monogon-dev/monogon/issues/191
+    flaky = True,
     deps = [
         "//metropolis/node",
         "//metropolis/node/core/consensus",
