--- a/metropolis/pkg/tpm/BUILD.bazel
+++ b/metropolis/pkg/tpm/BUILD.bazel
@@ -12,11 +12,11 @@ go_library(
         "//metropolis/pkg/logtree",
         "//metropolis/pkg/sysfs",
         "//metropolis/pkg/tpm/proto",
-        "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_google_go_tpm//tpm2",
         "@com_github_google_go_tpm//tpmutil",
         "@com_github_google_go_tpm_tools//client",
         "@com_github_pkg_errors//:errors",
+        "@org_golang_google_protobuf//proto",
         "@org_golang_x_crypto//nacl/secretbox",
         "@org_golang_x_sys//unix",
     ],
