cloud/b/b/reflection: add single-line HumanValue rendering, Index
This is in preparation for printing fields in bmcli.

Change-Id: I1aa178da1a50e8dd0c572a238f92daa536f9fcd9
Reviewed-on: https://review.monogon.dev/c/monogon/+/2170
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/cloud/bmaas/bmdb/reflection/BUILD.bazel
+++ b/cloud/bmaas/bmdb/reflection/BUILD.bazel
@@ -15,6 +15,8 @@ go_library(
         "@io_k8s_klog_v2//:klog",
         "@org_golang_google_protobuf//encoding/prototext",
         "@org_golang_google_protobuf//proto",
+        "@org_golang_google_protobuf//reflect/protopath",
+        "@org_golang_google_protobuf//reflect/protorange",
         "@org_golang_google_protobuf//reflect/protoreflect",
     ],
 )
