--- a/metropolis/node/core/metrics/BUILD.bazel
+++ b/metropolis/node/core/metrics/BUILD.bazel
@@ -10,8 +10,10 @@ go_library(
     importpath = "source.monogon.dev/metropolis/node/core/metrics",
     visibility = ["//visibility:public"],
     deps = [
+        "//go/types/mapsets",
         "//metropolis/node",
         "//metropolis/node/core/curator/proto/api",
+        "//metropolis/node/core/curator/watcher",
         "//metropolis/node/core/identity",
         "//metropolis/pkg/supervisor",
     ],
