--- a/metropolis/node/core/network/dhcp4c/transport/BUILD.bazel
+++ b/metropolis/node/core/network/dhcp4c/transport/BUILD.bazel
@@ -13,7 +13,7 @@ go_library(
         "@com_github_google_gopacket//:gopacket",
         "@com_github_google_gopacket//layers",
         "@com_github_insomniacslk_dhcp//dhcpv4",
-        "@com_github_mdlayher_raw//:raw",
+        "@com_github_mdlayher_packet//:packet",
         "@org_golang_x_net//bpf",
         "@org_golang_x_sys//unix",
     ],
