build: new workspace status script, new versioning scheme
This reimplements the workspace status script and fixes a bunch of
issues along the way:

1. The script is now in Python, which allows us to better express some
   complexity.
2. We now retrieve the Kubernetes version from
   third_party/go/repositories.bzl, thereby unhardcoding the Kubernetes
   version.
3. We now support for multiple 'products' with different versions.
   Currently we have only one product, which is metropolis. This is the
   basis for tying Git tags to releases of a particular codebase within
   the monorepo.
4. Git tags are now parsed to retrieve the version of a product, instead
   of it being hardcoded in the workspace status script.
5. We use a vX.Y.Z-devNNN versioning system for builds which have
   happened in between tags. NNN is the number of commits since vX.Y.Z.

This changes the current version of Metropolis from 0.1 to 0.1.0-dev440.

In an upcoming change we will implement a Go-side library to caputure
information about the workspace state, both the per-repo data like VCS
state and per-product data like versions. For now we keep a stopgap in
the new script to emit version data as expected by the current codebase.

Change-Id: I07cb17efc7d60aa269627a549f56ffa1bfdeb5b7
Reviewed-on: https://review.monogon.dev/c/monogon/+/2304
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>
Reviewed-by: Leopold Schabel <leo@monogon.tech>
Tested-by: Jenkins CI
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>

--- a/.bazelrc
+++ b/.bazelrc
@@ -67,7 +67,7 @@ build:dbg --@io_bazel_rules_go//go/config:tags=selinux,seccomp,no_zfs,no_aufs,no
 build --cxxopt=-std=c++17
 
 # Set workspace status file and stamp
-build --stamp --workspace_status_command=./build/print-workspace-status.sh
+build --stamp --workspace_status_command=./build/print-workspace-status.py
 
 # Load CI bazelrc if present.
 try-import %workspace%/ci.bazelrc
